--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,4 @@ jobs:
           mkdir build && cd build && cmake .. && cmake --build . && sudo make install
           popd
           git submodule update --init --recursive
-          mkdir build && cd build && cmake .. && cmake --build .
+          mkdir build && cd build && cmake .. -DRUN_CLANG_TIDY=ON && cmake --build .
