--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,7 @@ jobs:
           popd
           git submodule update --init --recursive
           mkdir build && cd build && cmake .. -DRUN_CLANG_TIDY=ON && cmake --build .
+      - name: Process clang-tidy warnings
+        uses: asarium/clang-tidy-action@v1
+        with:
+          fixesFile: build/clang-fixes.yaml
